--- a/Market/app/build.gradle
+++ b/Market/app/build.gradle
@@ -26,6 +26,10 @@ android {
         }
     }
 
+    buildFeatures {
+        viewBinding = true
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -34,6 +38,7 @@ android {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 }
+
 
 dependencies {
 
